--- a/src/main/resources/templates/info/info-home.html
+++ b/src/main/resources/templates/info/info-home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Учет ВТ</title>
+    <link rel="shortcut icon" th:href="@{/image/logo.png}" />
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-5.3.0/css/bootstrap.css}">
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-icons-1.10.5/font/bootstrap-icons.css}">
     <link rel="stylesheet" th:href="@{/plugins/select2/css/select2.min.css}">
@@ -21,6 +22,28 @@
         </div>
         <div class="card-body">
             <div class="alert alert-info">
+                <h5>v.2.3.0</h5>
+                <ol>
+                    <li>Страница устройств</li>
+                    <ol>
+                        <li>Добавлена кнопка для того что бы скопировать ссылку на устройство</li>
+                        <li>На странице устройств добавлена возможность указания технических характеристик устройства (ЦП, ОЗУ ...)</li>
+                    </ol>
+                    <li>На странице всех устройств кол-во выводимых устройств изменено с 30 до 15. Сделано это для удобства просмотра под экран FullHD</li>
+                    <li>На странице истории предупреждения и ошибки теперь будут подсвечиваться разными цветами</li>
+                    <li>На странице настроек администраторы могут добавлять и удалять технические характеристики у разных типов устройств</li>
+                    <li>Добавлена новая страница: "Документы".</li>
+                    <li>
+                        На странице "Документы" появилась возможность сделать полную выгрузку из программы.
+                        (Со всеми устройствами, пользователями, отделами, характеристиками и т.д.)
+                    </li>
+                    <li>На странице информации появилась ссылка на получение инструкции</li>
+                    <li>На странице авторизации исправлена ошибка с элементом ввода, когда тот отображался не на всю ширину окна</li>
+                    <li>Во вкладке браузера теперь отображается логотип программы</li>
+                    <li>Мелкие визуальные изменения</li>
+                </ol>
+            </div>
+            <div class="alert alert-secondary">
                 <h5>v.2.2.2</h5>
                 <ol>
                     <li>Страница устройств</li>
@@ -81,71 +104,6 @@
                         <li>Переход к Spring AOP (для знающих)</li>
                         <li>Исправлены текстовые ошибки</li>
                         <li>Мелкие визуальные исправления</li>
-                    </ol>
-                </ol>
-            </div>
-            <div class="alert alert-secondary">
-                <h5>v.2.0.2</h5>
-                <ol>
-                    <li>Исправлена ошибка при выгрузке в Excel</li>
-                    <ol>
-                        <li>Была исправлена ошибка выгрузки в Excel, когда инвентарный номер заменялся 0 после 15-ого знака</li>
-                    </ol>
-                </ol>
-            </div>
-            <div class="alert alert-secondary">
-                <h5>v.2.0.1</h5>
-                <ol>
-                    <li>Страница устройства</li>
-                    <ol>
-                        <li>Добавлена кнопка назад, которая вернет на страницу всех устройств</li>
-                        <li>Кнопка удалить теперь выведет предупреждение об удалении</li>
-                    </ol>
-                </ol>
-            </div>
-            <div class="alert alert-secondary">
-                <h5>v.2.0.0</h5>
-                <ol>
-                    <li>Обновлено:</li>
-                    <ol>
-                        <li>Полностью переработан внешний вид</li>
-                        <li>Улучшено взаимодействие с программой с учетом рекомендаций пользователей</li>
-                        <li>Авторизация:</li>
-                        <ol>
-                            <li>Логины при входе в программу теперь можно не запоминать, а искать и выбирать их.</li>
-                            <li>Логином будет являться имя доменной учетной записи</li>
-                            <li>Cессия в программе будет длиннее. (Реже теперь будет необходимо вводить логин и пароль)</li>
-                        </ol>
-                        <li>Главная страница:</li>
-                        <ol>
-                            <li>Cтраница более не является функциональной, теперь она информационная.</li>
-                            <li>Теперь на главной странице указана небольшая информация о сотруднике</li>
-                        </ol>
-                        <li>Взаимодействие с устройствами:</li>
-                        <ol>
-                            <li>Добавлена сортировка для каждого столбца таблиц</li>
-                            <li>Поиск теперь работает по всем параметрам таблиц (с помощью него можно теперь сортировать данные и выгружать их в Excel)</li>
-                            <li>Теперь производители устройств будут едины. Их придется выбирать, а не писать самостоятельно (Не будет того, что кто-то написал Aquarius, а кто-то AQUARIUS ну и самое забавное Aguarius)</li>
-                            <li>Cтатусы переработаны. Теперь в программе имеются все необходимые для этого статусы.</li>
-                            <li>Убран промежуточный этап просмотра информации об устройстве. Теперь редактирование доступно сразу.</li>
-                            <li>В описании устройства убрано поле "Ответственный" просто за ненадобностью.</li>
-                        </ol>
-                        <li>Работа с адресами:</li>
-                        <ol>
-                            <li>Переработана логика адресов (зарегистрированных зданий). Все адреса теперь имеют район, населенный пункт, улицу и дом. Без всяких сокращенных названий</li>
-                        </ol>
-                        <li>Работа с пользователями:</li>
-                        <ol>
-                            <li>Добавлена возможность редактирования пользователей (как администраторам, так и самим пользователям(с ограничениями))</li>
-                            <li>Добавлена возможность удаления пользователей (только администраторам)</li>
-                            <li>Все пользователи могут просматривать кто зарегистрирован в программе, но изменять могут только администраторы</li>
-                            <li>Администратор более не может подсказать вам ваш пароль, но может сбросить его.</li>
-                        </ol>
-                        <li>Другое:</li>
-                        <ol>
-                            <li>У программы появилась версионность. Версия указанна на странице авторизации и на вкладке "Информация".</li>
-                            <li>Добавлена страница "Информация". На ней можно будет узнать о текущей версии программы и о списках изменений.</li>
-                        </ol>
                     </ol>
                 </ol>
             </div>
