--- a/src/main/resources/templates/settings/settings-devices.html
+++ b/src/main/resources/templates/settings/settings-devices.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Учет ВТ</title>
+    <link rel="shortcut icon" th:href="@{/image/logo.png}" />
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-5.3.0/css/bootstrap.css}">
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-icons-1.10.5/font/bootstrap-icons.css}">
     <link rel="stylesheet" th:href="@{/plugins/select2/css/select2.min.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/plugins/select2/css/select2-bootstrap.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/plugins/data-tables/DataTables-1.13.5/css/dataTables.bootstrap.css}"/>
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
@@ -64,24 +67,78 @@
                 </form>
             </div>
         </div>
-<!--        <div sec:authorize="${hasAnyRole('Admin')}" class="card default-shadow mt-4">-->
-<!--            <div class="card-header">-->
-<!--                Добавление нового производителя устройств-->
-<!--            </div>-->
-<!--            <div class="card-body">-->
-<!--                <div class="alert alert-info mt-1" role="alert">-->
-<!--                    Перед добавлением убедитесь что данный производитель существует и написан верно!-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
+        <div sec:authorize="${hasAnyRole('Admin')}" class="card default-shadow mt-4">
+            <div class="card-header">
+                Добавление новой характеристики для типа устройств
+            </div>
+            <div class="card-body">
+                <div class="alert alert-info mt-1" role="alert">
+                    Перед добавлением удостоверьтесь, что такой характеристики действительно нет у данного типа устройств
+                    <p class="text-danger">
+                        Если будет необходимо удалить характеристику имейте в виду, что значение этой
+                        характеристики удалится у всех устройств без возможности восстановления
+                    </p>
+                </div>
+                <form th:method="post" action="/settings/devices/specifications/new" th:object="${NewSpecification}">
+                    <div class="input-form-group d-flex justify-content-between flex-column mb-4">
+                        <label for="device-status-change">Тип устройств</label>
+                        <select id="device-status-change" class="js-example-basic-single form-control select2-auto-input" style="width: 100% !important;" th:field="*{type}">
+                            <option class="ItemType"
+                                    th:each="type : ${AllTypesDevices}"
+                                    th:value="${type.getId()}"
+                                    th:text="${type.getName()}">
+                            </option>
+                        </select>
+                    </div>
+                    <div class="input-form-group d-flex justify-content-between flex-column mb-4">
+                        <label for="specification">Имя характеристики</label>
+                        <input id="specification" class="form-control" type="text" placeholder="Например: ОЗУ" th:field="*{name}">
+                    </div>
+                    <div class="d-flex justify-content-end">
+                        <button type="submit" class="btn btn-success">Добавить</button>
+                    </div>
+                </form>
+                <div class="card-body table-responsive">
+                    <table id="tableSpecification" class="table">
+                        <thead>
+                        <tr>
+                            <th scope="col">Тип</th>
+                            <th scope="col">Характеристика</th>
+                            <th scope="col">Действия</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="specificationType: ${AllSpecificationsType}">
+                            <td th:text="${specificationType.getType().getName()}"></td>
+                            <td th:text="${specificationType.getName()}"></td>
+                            <td class="d-flex ">
+                                <form th:method="post" th:action="'/settings/devices/specification/delete/'+${specificationType.getId()}">
+                                    <button type="submit" class="btn btn-danger" title="Удаление характеристики может привести к потере данных!">Удалить</button>
+                                </form>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 <script type="text/javascript" th:src="@{/plugins/bootstrap-5.3.0/js/bootstrap.bundle.js}"></script>
 <script type="text/javascript" th:src="@{/plugins/jquery/jquery-3.6.0.min.js}"></script>
 <script type="text/javascript" th:src="@{/plugins/select2/js/select2.min.js}"></script>
+<script type="text/javascript" th:src="@{/plugins/data-tables/DataTables-1.13.5/js/jquery.dataTables.js}"></script>
+<script type="text/javascript" th:src="@{/plugins/data-tables/DataTables-1.13.5/js/dataTables.bootstrap5.js}"></script>
 <script>
     $(document).ready(function() {
-        $('.js-example-basic-single').select2();
+        $('.js-example-basic-single').select2({
+            theme: "bootstrap"
+        });
+        $('#tableSpecification').DataTable({
+            language: {
+                url: '/plugins/data-tables/ru.json'
+            }
+        });
     });
 </script>
 <script type="text/javascript" th:src="@{/js/script.js}"></script>
