--- a/src/main/resources/templates/history/history-home.html
+++ b/src/main/resources/templates/history/history-home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Учет ВТ</title>
+    <link rel="shortcut icon" th:href="@{/image/logo.png}" />
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-5.3.0/css/bootstrap.css}">
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-icons-1.10.5/font/bootstrap-icons.css}">
     <link rel="stylesheet" th:href="@{/plugins/select2/css/select2.min.css}">
@@ -29,7 +30,9 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="history: ${AllHistory}">
+                    <tr th:each="history: ${AllHistory}"
+                        th:classappend="${history.getType().name.equals('Error') ? 'table-danger' :
+                        ( history.getType().name.equals('Warning') ? 'table-warning' : '')}">
                         <th scope="row" th:text="${history.getDataHistory().toString()}"></th>
                         <td th:text="${history.getTextChange()}"></td>
                         <td th:text="${history.getDopInfo()}"></td>
