--- a/src/main/resources/templates/info/info-home.html
+++ b/src/main/resources/templates/info/info-home.html
@@ -35,9 +35,8 @@
                     <li>Добавлена новая страница: "Документы".</li>
                     <li>
                         На странице "Документы" появилась возможность сделать полную выгрузку из программы.
-                        (Со всеми устройствами, пользователями, отделами, характеристиками и т.д.)
+                        (Со всеми устройствами, пользователями, отделами)
                     </li>
-                    <li>На странице информации появилась ссылка на получение инструкции</li>
                     <li>На странице авторизации исправлена ошибка с элементом ввода, когда тот отображался не на всю ширину окна</li>
                     <li>Во вкладке браузера теперь отображается логотип программы</li>
                     <li>Мелкие визуальные изменения</li>
